upgrade to Izpack 3.7.2